# qt-pclview

./: .gitignore  CMakeLists.txt  README.md  make.sh
include/: mainwindow.h  ui_mainwindow.h
src/: main.cpp  mainwindow.cpp
viewer/: boundingbox.h  pclview.cpp  pclview.h  pclwidgets.cpp
